--- a/index.ipynb
+++ b/index.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class KNN(object): \n",
+    "    def fit(self):\n",
+    "        pass \n",
+    "    def predict(self):\n",
+    "        pass \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,12 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit(self, X_train, y_train):\n",
-    "    pass\n",
+    "    self.X_train = X_train\n",
+    "    self.y_train = y_train\n",
+    "    \n",
     "    \n",
     "# This line updates the knn.fit method to point to the function we've just written\n",
     "KNN.fit = fit"
@@ -101,13 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_distances(self, x):\n",
-    "    pass\n",
-    "\n",
+    "    dists = []\n",
+    "    for ind, x_value in enumerate(self.X_train):\n",
+    "        dists.append((ind, euc(x, x_value)))\n",
+    "        return dists\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_distances = _get_distances"
    ]
@@ -132,12 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_k_nearest(self, dists, k):\n",
-    "    pass\n",
+    "    distances = sorted(dists, key=lambda x: x[1])\n",
+    "    return distances[:k]\n",
+    "    #Return the first k tuples from the (now sorted) dists array.\n",
     "\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_k_nearest = _get_k_nearest"
@@ -158,13 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _get_label_prediction(self, k_nearest):\n",
-    "    pass\n",
-    "\n",
+    "    labels = [self.y_train[i] for i, _ in k_nearest]\n",
+    "    counts = np.bincount(labels)\n",
+    "    return np.argmax(counts)\n",
+    "#I copied this from the solution\n",
     "# This line attaches the function we just created as a method to our KNN class.\n",
     "KNN._get_label_prediction = _get_label_prediction"
    ]
@@ -203,13 +218,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict(self, X_test, k=3):\n",
-    "    pass\n",
-    "        \n",
+    "    preds = []\n",
+    "    for i in X_test:\n",
+    "        distances = self._get_distances(i)\n",
+    "        k_neighbors = self._get_k_nearest(distances, k)\n",
+    "       \n",
+    "        preds.append(_get_label_prediction(k_neighbors))\n",
+    "    return preds\n",
     "KNN.predict = predict"
    ]
   },
@@ -228,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,9 +256,43 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "iris = load_iris()\n",
+    "iris = load_iris()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data = iris.data\n",
     "target = iris.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target"
    ]
   },
   {
@@ -250,11 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = None"
+    "X_train, X_test, y_train, y_test = train_test_split(data, target, test_size=.25)"
    ]
   },
   {
@@ -266,11 +320,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn = None"
+    "knn = KNN()\n",
+    "knn.fit(X_train, y_train)"
    ]
   },
   {
@@ -282,11 +337,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "_get_label_prediction() missing 1 required positional argument: 'k_nearest'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-e366ef750f64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mknn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-29-d20ce1b49a18>\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X_test, k)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mk_neighbors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_k_nearest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistances\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mpreds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_get_label_prediction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk_neighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpreds\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mKNN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: _get_label_prediction() missing 1 required positional argument: 'k_nearest'"
+     ]
+    }
+   ],
    "source": [
-    "preds = None"
+    "preds = knn.predict(X_test, k=2)"
    ]
   },
   {
@@ -339,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
